<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grab2_behavior_tree</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elsayed.elsheikh97@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>vision_msgs_rviz_plugins</depend>
  <depend>trajectory_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>control_msgs</depend>
  <depend>grab2_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
