<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grab2_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elsayed.elsheikh97@gmail.com">sayed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>gripper_controllers</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>topic_based_ros2_control</depend>
  <depend>ur_description</depend>
  <depend>moveit_resources_panda_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
