<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grab2_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elsayed.elsheikh97@gmail.com">sayed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>grab2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <!-- <depend>moveit_visual_tools</depend> -->
  <depend>moveit_configs_utils</depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <depend>grab2_ros_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
